k8s/nextcloud/07-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nextcloud
  namespace: nextcloud

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nextcloud

  template:
    metadata:
      labels:
        app: nextcloud

    spec:
      containers:
        - name: nextcloud
          image: nextcloud:30-apache

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html

            - name: bootstrap
              mountPath: /bootstrap

          command:
            - /bin/bash
            - -c
            - |
              /entrypoint.sh apache2-foreground &
              (
                sleep 60
                bash /bootstrap/bootstrap.sh
              ) &
              wait

      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data

        - name: bootstrap
          configMap:
            name: nextcloud-bootstrap
            defaultMode: 0755
