k8s/nextcloud/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud

  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: service

spec:
  type: ClusterIP

  selector:
    app: nextcloud 

  ports:
    - name: http
      port: 80
      targetPort: 80
