k8s/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: service
spec:
  selector:
    app.kubernetes.io/name: nextcloud

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
